--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
                   args: mdbook
 
             - name: Generate summary
-              run: ./generate-book.sh
+              run: mdbook build
 
             # HTML publication as Github Page
             #
