--- a/book.toml
+++ b/book.toml
@@ -1,8 +1,8 @@
 [book]
-title = "The Rust Programming Language"
+title = "Rust 程式設計語言"
 author = "Steve Klabnik and Carol Nichols, with Contributions from the Rust Community"
 
 [output.html]
 additional-css = ["ferris.css", "theme/2018-edition.css"]
 additional-js = ["ferris.js"]
-git-repository-url = "https://github.com/rust-lang/book"
+git-repository-url = "https://github.com/rust-tw/book-tw"
